--- a/index.html
+++ b/index.html
@@ -10,14 +10,24 @@
     <div class="container">
         <header class="header">
             <img src="https://www.toastmasters.org//content/images/globals/toastmasters-logo@2x.png" alt="Toastmasters Logo">
-            <h1>Stella Mary’s Toastmasters</h1>
-            <h2>Meeting Agenda</h2>
-            <p>Date: August 30, 2024</p>
+            <div>
+                <h1>Stella Mary’s Toastmasters</h1>
+                <p>District 120,Region 13,Division I,Area 2</p>
+            </div>
         </header>
 
         <section class="meeting-details">
             <h3>Theme of the Day: <span contenteditable="true">Innovation in Leadership</span></h3>
             <h3>Word of the Day: <span contenteditable="true">Elated</span></h3>
+        </section>
+        <section class="role-players">
+            <h3>Role Players</h3>
+            <ul>
+                
+                <li><strong>Toastmaster of the Day (TMOD):</strong> Michael Brown</li>
+                <li><strong>Table Topics Master:</strong> Sarah Lee</li>
+                <li><strong>General Evaluator:</strong> David Black</li>
+            </ul>
         </section>
 
         <section class="agenda">
@@ -63,6 +73,18 @@
                             </li>
                             <li>
                                 <strong>Speaker 3:</strong> Alan Lee (Level 3, Project 1) <br>
+                                <strong>Evaluator:</strong> Susan Green
+                            </li>
+                            <li>
+                                <strong>Speaker 4:</strong> Alan Lee (Level 3, Project 1) <br>
+                                <strong>Evaluator:</strong> Susan Green
+                            </li>
+                            <li>
+                                <strong>Speaker 5:</strong> Alan Lee (Level 3, Project 1) <br>
+                                <strong>Evaluator:</strong> Susan Green
+                            </li>
+                            <li>
+                                <strong>Speaker 6:</strong> Alan Lee (Level 3, Project 1) <br>
                                 <strong>Evaluator:</strong> Susan Green
                             </li>
                         </ul>
