add a button for Other Speakers index.html

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </section>
         
                                <footer class="footer">
-                    <a class="a" href="">other-speakers</a>
+                    <a class="a" href="" style="background-color: #004165; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px; display: inline-block;">Other Speakers</a>
                     <script>
                         // Function to get the meeting number from the URL
                         function getMeetingNumberFromURL() {
