Update link to Toastmasters logo in index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <img src="https://www.toastmasters.org/content/images/globals/toastmasters-logo@2x.png" alt="Toastmasters Logo">
+            <a href=""><img src="https://www.toastmasters.org/content/images/globals/toastmasters-logo@2x.png" alt="Toastmasters Logo"></a>
             <div>
                 <h1>Stella Mary’s Toastmasters</h1>
                 <p>District 120, Region 13, Division I, Area 2</p>
