Fix typo in Debate Moderator label

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <li><strong>Toastmaster of the Day (TMOD):</strong> <span id="tmod"></span></li>
                 <li><strong>Table Topics Master:</strong> <span id="tt-master"></span></li>
                 <li><strong>General Evaluator:</strong><span id="ge"></li>
-                <li><strong>Debate Modrator:</strong><span id="dm"></span></li>
+                <li><strong>Debate Moderator:</strong><span id="dm"></span></li>
                 <li><strong>TAG team:</strong> <br></li>
                 <i>
                     <li style="padding-left: 2em; font-weight: 10;"> <strong>Timer :</strong> <span id="timer"></span><strong>     AH counter:</strong> <span id="ah-counter"> </span><strong> Grammarian:</strong> <span id="grammarian"></span></li>
