--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Toastmasters Meeting Agenda</title>
+    <title id="page-title"></title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="https://www.toastmasters.org/content/images/globals/toastmasters-logo@2x.png" type="image/x-icon">
 </head>
