--- a/other-speakers.html
+++ b/other-speakers.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="https://www.toastmasters.org/content/images/globals/toastmasters-logo@2x.png" type="image/x-icon">
 </head>
-<body>
+<body style="margin: 50px;">
     
 
-<section class="tt-speakers">
+<section class="tt-speakers" >
     <h3>Table Topics Speakers</h3>
     <ul id="tt-speakers-list"></ul>
 </section>
