--- a/other-speakers.html
+++ b/other-speakers.html
@@ -6,6 +6,15 @@
     <title id="page-title">Other Speakers List</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="https://www.toastmasters.org/content/images/globals/toastmasters-logo@2x.png" type="image/x-icon">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5XK2MXWF8J"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-5XK2MXWF8J');
+    </script>
 </head>
 <body style="margin: 50px;">
     
